# bevy_bae

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
examples/: conditions.rs  follow_cursor.rs  minimal.rs
src/: lib.rs  name_ext.rs  plan.rs  value_ext.rs
src/condition/: builtin.rs  mod.rs  relationship.rs
src/effect/: mod.rs  relationship.rs
src/plan/: execution.rs  execution.rs.bak  mod.rs  mtr.rs  update.rs
src/task/: mod.rs  operator.rs  primitive.rs  validation.rs
src/task/compound/: mod.rs  relationship.rs  select.rs  sequence.rs
tests/: effects.rs  execution.rs  plan.rs  tests.rs
