

[package]
name = "bevy_bae"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0 "
description = "Behavior as entities!"
readme = "readme.md"
repository = "https://github.com/janhohenheim/bevy_bae"
keywords = ["bevy", "ai", "htn"]
categories = ["game-development"]
include = ["/src", "/license*"]

[dependencies]
bevy_bae_macros = { version = "0.0.1", path = "macros" }

bevy_ecs = { version = "0.17", default-features = false, features = ["bevy_reflect"] }
bevy_app = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_ptr = { version = "0.17", default-features = false }

bevy_mod_props = { version = "0.1", git = "https://github.com/NthTensor/trill" }

ustr = { version = "1" }
variadics_please = "1"

[dev-dependencies]
bevy = { version = "0.17", default-features = true, features = ["track_location"] }

[lints.rust]
#missing_docs = "warn"

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# no_std support
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace]
members = ["macros"]
